# heartbeat-obstacle-detector

./: .pre-commit-config.yaml  README.md  TODO.txt  detector.py  lint.sh  monitor.py  process_manager.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
docs/: class.mermaid  sequence.mermaid  software_architecture.md
src/: config.py  detector.py  logger.py  monitor.py  process_manager.py
tests/: test_detector.py  test_monitor.py  test_process_manager.py
