[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat-obstacle-detector"
version = "0.1.0"
description = "A proof-of-concept implementation of the Heartbeat architectural tactic for fault detection and recovery"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["heartbeat", "fault-detection", "architecture", "self-driving-car"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No external dependencies needed - using standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.2.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ajbarea/heartbeat-obstacle-detector"
Repository = "https://github.com/ajbarea/heartbeat-obstacle-detector.git"
Issues = "https://github.com/ajbarea/heartbeat-obstacle-detector/issues"

# Tool configurations
[tool.black]
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
extend-ignore = [
    "E203",  # Whitespace before ':'
    "E501",  # Line too long (handled by black)
    "W503",  # Line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".tox",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["heartbeat_obstacle_detector/detector.py", "heartbeat_obstacle_detector/monitor.py", "heartbeat_obstacle_detector/process_manager.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
